Add resolve-safe merge mode and custom splash

--- a/settings.json
+++ b/settings.json
@@ -10,10 +10,11 @@
   "filename_template": "{idx}.ATM_{timestamp}.mp4",
   "ffmpeg_threads": 0,
   "copy_codec": true,
+  "resolve_safe_mode": true,
   "delete_sources": false,
   "remember_dirs": true,
-  "last_input_dir": "",
-  "last_output_dir": "",
+  "last_input_dir": "I:\\视频下载",
+  "last_output_dir": "F:\\桌面",
   "parallel_workers": 4,
   "retry_on_failure": true,
   "max_retries": 2,
